<resources>
    <string name="app_name">Daily Grind Express Client</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile_number">Mobile number</string>
    <string name="email_optional">Email (optional)</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="orders">Orders</string>
    <string name="routes">Routes</string>
    <string name="vouchers">Vouchers</string>
    <string name="help_center">Help Center</string>
    <string name="order">Order</string>
    <string name="completed">Completed</string>
    <string name="active">Active</string>
    <string name="create_an_order_now">Create an order now</string>
    <string name="create_order">Create Order</string>
    <string name="pick_up_person">Pick up person</string>
    <string name="contact_number">Contact number</string>
    <string name="comment">Comment</string>
    <string name="_12_d_florencie_s1_caloocan_city">12 D Florencie S1. Caloocan City</string>
    <string name="next">NEXT</string>
    <string name="welcome">Welcome</string>
    <string name="car">Car</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="cash">Cash</string>
    <string name="online_payment">Online Payment</string>
    <string name="enter_voucher">Enter Voucher</string>
    <string name="add">Add</string>
    <string name="no_address">No Address</string>
</resources>