<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FAFAFA"
    tools:context=".views.registration.AccountInfoFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="center"
        android:orientation="vertical">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="Enter your details"
           android:fontFamily="@font/poppins"
           android:textColor="@color/black"
           android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/first_name"
            android:textColor="#6E111D"
            android:layout_marginVertical="5dp"
            />
        <EditText
            android:id="@+id/inputFirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:paddingStart="25dp"
            android:inputType="textPersonName"
            android:background="@drawable/ic_input_bg"
            android:drawableStart="@drawable/ic_user"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/last_name"
            android:textColor="#6E111D"
            android:layout_marginVertical="5dp"
            />
        <EditText
            android:id="@+id/inputLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:paddingStart="25dp"
            android:inputType="textPersonName"
            android:background="@drawable/ic_input_bg"
            android:drawableStart="@drawable/ic_user"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/email_optional"
            android:textColor="#6E111D"
            android:layout_marginVertical="5dp"
            />
        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:paddingStart="25dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/ic_input_bg"
            android:drawableStart="@drawable/ic_email"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/password"
            android:textColor="#6E111D"
            android:layout_marginVertical="5dp"
            />
        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:paddingStart="25dp"
            android:inputType="textPassword"
            android:background="@drawable/ic_input_bg"
            android:drawableStart="@drawable/ic_password"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="Confirm Password"
            android:textColor="#6E111D"
            android:layout_marginVertical="5dp"
            />
        <EditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:paddingStart="25dp"
            android:inputType="textPassword"
            android:background="@drawable/ic_input_bg"
            android:drawableStart="@drawable/ic_password"
            tools:ignore="RtlSymmetry" />

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_conditions"/>
        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/terms_and_conditions"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#995760"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#6E111D"
            android:text="@string/sign_up"
            android:enabled="false"
            android:padding="10dp"
            android:layout_margin="20dp"
            app:cornerRadius="20dp"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/textError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="@font/poppins"
            android:text="" />
    </LinearLayout>


</FrameLayout>