<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.navbar.order.createorder.PackageDetailsFragment">

    <View
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:background="@drawable/gold_bg"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="50dp">
            <View
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/circle"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_weight="1"
                android:backgroundTint="#C2B5B7"
                android:background="@color/purple_500"
                android:layout_gravity="center"/>
            <View
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:backgroundTint="#C2B5B7"
                android:background="@drawable/circle"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_weight="1"
                android:backgroundTint="#C2B5B7"
                android:background="@color/purple_500"
                android:layout_gravity="center"/>
            <View
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:backgroundTint="#C2B5B7"
                android:background="@drawable/circle"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Set Drop of Details"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_margin="2dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardElevation="10dp"
                    app:shapeAppearance="@style/card1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.button.MaterialButtonToggleGroup
                            android:id="@+id/buttonToggle"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            app:selectionRequired="true"
                            app:singleSelection="true">

                            <Button
                                android:id="@+id/buttonMotorcycle"
                                style="@style/Widget.MaterialComponents.Button.TextButton"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="@string/motorcycle" />

                            <Button
                                android:id="@+id/buttonCar"
                                style="@style/Widget.MaterialComponents.Button.TextButton"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"

                                android:text="@string/car" />
                        </com.google.android.material.button.MaterialButtonToggleGroup>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:padding="10dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="Parcel Weight" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />
                        </LinearLayout>

                        <com.google.android.material.divider.MaterialDivider
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:padding="10dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="Parcel Type" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />
                        </LinearLayout>

                        <com.google.android.material.divider.MaterialDivider
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:elevation="10dp"
                        android:background="@drawable/voucher_bg">
                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@null"
                            />
                        <FrameLayout
                            android:layout_width="120dp"
                            android:layout_height="50dp"
                            android:background="@drawable/voucher"
                            >
                            <com.google.android.material.button.MaterialButton
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/add"
                                app:cornerRadius="20dp"/>
                        </FrameLayout>
                    </LinearLayout>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="10dp"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RadioGroup
                            android:id="@+id/radioGroup"
                            android:checkedButton="@+id/radioCash"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/radioCash"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/cash"/>
                            <com.google.android.material.divider.MaterialDivider
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                        <RadioButton
                            android:id="@+id/radioOnlinePayment"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/online_payment"/>
                        </RadioGroup>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>